<resources>
    <string name="app_name">Health</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="menu_profile">Profile and settings</string>
    <string name="menu_calculators">Calculators</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_journals">Journals</string>
    <string name="menu_band">Fitness bracelet</string>

    <string name="bmi_calculator_name">Body mass index</string>
    <string name="dca_calculator_name">Daily calories amount</string>
    <string name="dwa_calculator_name">Daily water amount</string>
    <string name="iw_calculator_name">Ideal weight</string>

    <string name="distance_journal_name">Distance journal</string>
    <string name="steps_journal_name">Steps journal</string>
    <string name="calories_journal_name">Calories journal</string>
    <string name="weight_journal_name">Weight journal</string>

    <string name="mac_address">Mi Band Address:</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="bluetooth_status">Bluetooth status</string>
    <string name="steps">Steps</string>
    <string name="distance_meters">Distance in meters</string>
    <string name="calories_amount">Calories</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not connected</string>
    <string name="save">Save</string>

    <string name="bmi_calculator_description">Calculates body mass index</string>
    <string name="dca_calculator_description">Calculates your daily calorie requirement</string>
    <string name="dwa_calculator_description">Calculate your daily water requirement</string>
    <string name="iw_calculator_description">Calculates the ideal weight for height</string>

    <string name="number_seven" translatable="false">7</string>
    <string name="number_thirty" translatable="false">30</string>
    <string name="number_severe_underweight" translatable="false">0 – 15</string>
    <string name="number_underweight" translatable="false">16 – 18.5</string>
    <string name="number_norm" translatable="false">18.5 – 25</string>
    <string name="number_overweight" translatable="false">25 – 30</string>
    <string name="number_obesity" translatable="false">30 – 35</string>
    <string name="number_acute_obesity" translatable="false">35 – 40</string>
    <string name="number_very_severe_obesity" translatable="false">40 – ∞</string>
    <string name="severe_underweight">Severe underweight</string>
    <string name="underweight">Underweight</string>
    <string name="norm">Norm</string>
    <string name="overweight">Overweight (pre obesity)</string>
    <string name="obesity">Obesity</string>
    <string name="acute_obesity">Acute obesity</string>
    <string name="very_severe_obesity">Very severe obesity</string>

    <string name="not_selected">Not selected</string>
    <string-array name="gender_name">
        <item>Не обрано</item>
        <item>Чоловіча</item>
        <item>Жіноча</item>
    </string-array>

    <string-array name="language_name">
        <item>Український</item>
        <item>English</item>
        <item>Русский</item>
    </string-array>


    <string-array name="activity_name">
        <item>Відсутній</item>
        <item>Мінімальний</item>
        <item>Низький</item>
        <item>Середній</item>
        <item>Високий</item>
        <item>Дуже високий</item>
    </string-array>

    <string name="your_index">Your index:</string>
    <string name="your_water_amount">Your daily water amount:</string>
    <string name="your_ideal_weight">Your ideal weight:</string>
    <string name="your_daily_calories">Your daily calories amount:</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="gender">Gender</string>
    <string name="activity_rates">Activity rates</string>
    <string name="age">Age</string>
    <string name="kg" translatable="false">kg</string>
    <string name="cm" translatable="false">cm</string>
    <string name="ml" translatable="false">ml</string>
    <string name="calories">calories</string>
    <string name="years">years</string>
    <string name="calculate">Calculate</string>

    <string name="empty_weight_form">Please enter weight</string>
    <string name="empty_height_form">Please enter height</string>
    <string name="empty_age_form">Please enter age</string>
    <string name="empty_gender">Please choose gender</string>
    <string name="all_forms_empty">Please fill out the forms</string>
    <string name="not_all_forms_empty">Please fill the rest of the forms</string>
    <string name="mac_address_empty">Please input Mac address</string>
    <string name="correct">Correct</string>
    <string name="on_failure">Error</string>
    <string name="pls_input_amount">Input amount:</string>
    <string name="pls_choose_date">Choose a date:</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="range">Range</string>
    <string name="back">Back</string>
    <string name="choose_what_save">Choose what to save</string>
    <string name="distance">Distance</string>
    <string name="select_range">Select Range</string>
    <string name="new_entity">New Entity</string>
    <string name="profile">Profile</string>
    <string name="new_pass">New password</string>
    <string name="new_email">New email</string>
    <string name="first_name">Name</string>
    <string name="last_name">Last name</string>
    <string name="choose_locale">Choose language</string>

    <string name="distance_journal_info">View distance traveled</string>
    <string name="weight_journal_info">View weight change information</string>
    <string name="calories_journal_info">View calories eaten</string>
    <string name="steps_journal_info">View the number of steps</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Sign Up</string>

    <string name="email_exist">User exist</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_pass">Invalid password</string>

    <string name="new_email_saved">New email saved</string>
</resources>