<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calculators"
            android:icon="@drawable/ic_menu_calculators"
            android:title="@string/menu_calculators" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_journal"
            android:icon="@drawable/ic_menu_journal"
            android:title="@string/menu_journals" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_band"
            android:icon="@drawable/ic_menu_band"
            android:title="@string/menu_band" />
    </group>
</menu>