<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_calculators">
    <fragment
        android:id="@+id/nav_calculators"
        android:name="com.example.diplomandroid.ui.calculators.CalculatorsFragment"
        android:label="@string/menu_calculators"
        tools:layout="@layout/fragment_calculators" />
    <fragment
        android:id="@+id/nav_journal"
        android:name="com.example.diplomandroid.ui.journals.JournalsFragment"
        android:label="@string/menu_journals"
        tools:layout="@layout/fragment_journals" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.diplomandroid.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.diplomandroid.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>